--- a/index.html
+++ b/index.html
@@ -6,69 +6,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <header>
     <nav>
-        <a href="./index.html" aria-label="логотип сайта" lang="en">WebStudio</a>
-        <ul>
+        <a href="./index.html" aria-label="логотип сайта" lang="en" class="logo-header"><span>Web</span>Studio</a>
+        <ul class="site-nav list">
             <li>
-                <a href="#">Студия</a>
+                <a href="#" class="link current">Студия</a>
             </li>
             <li>
-                <a href="#">Портфолио</a>
+                <a href="#" class="link">Портфолио</a>
             </li>
             <li>
-                <a href="#">Контакты</a>
+                <a href="#" class="link">Контакты</a>
             </li>
         </ul>
     </nav>
     <address>
-        <ul>
-        <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
+        <ul class="address-nav list">
+            <li>
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
         </ul>
     </address>
   </header>
   <main>
 
       <!-- HERO -->
-    <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+    <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="button">Заказать услугу</button>
     </section>
 
     <!-- ADVANTAGES -->
-    <section>
-        <h2 hidden>Преимущества работы со студией</h2>
-        <ul>
+    <section  class="section">
+        <h2 class="visually-hidden">Преимущества работы со студией</h2>
+        <ul class="list">
             <li>
                 <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
                 <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
                 <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
                 <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
 
     <!-- GALLERY -->
-    <section>
+    <section class="section">
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
             <li>
                 <img src="./images/gallery/gallery-img-1.png" alt="Разработка сайта" width="370" height="294">
             </li>
@@ -82,28 +83,28 @@
     </section>
 
     <!-- OUR TEAM -->
-    <section>
+    <section class="section">
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list">
             <li>
                 <img src="./images/team/team-img-1.jpg" alt="Игорь Демьяненко улыбается" width="270" height="260">
                 <h3>Игорь Демьяненко</h3>
-                <p lang="en">Product Designer</p>
+                <p class="section-text" lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="./images/team/team-img-2.jpg" alt="Ольга Репина улыбается" width="270" height="260">
                 <h3>Ольга Репина</h3>
-                <p lang="en">Frontend Developer</p>
+                <p class="section-text" lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/team/team-img-3.jpg" alt="Николай Тарасов улыбается" width="270" height="260">
                 <h3>Николай Тарасов</h3>
-                <p lang="en">Marketing</p>
+                <p class="section-text" lang="en">Marketing</p>
             </li>
             <li>
                 <img src="./images/team/team-img-4.jpg" alt="Михаил Ермаков улыбается" width="270" height="260">
                 <h3>Михаил Ермаков</h3>
-                <p lang="en">UI Designer</p>
+                <p class="section-text" lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
@@ -111,20 +112,20 @@
   <footer>
 
       <!-- CONTACT INFORMATION -->
-    <section>
-        <h2 hidden>Контакты</h2>
-        <a href="./index.html" aria-label="логотип сайта" lang="en">WebStudio</a>
+    <section class="contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <a href="./index.html" aria-label="логотип сайта" lang="en" class="logo-footer"><span>Web</span>Studio</a>
         <address>
-            <ul>
+            <ul class="footer-address list">
                 <li>
                     <!-- Сменил "проспект" на "бульвар", т.к. проспект Леси Украинки в Киеве нет -->
-                    <a href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank" rel="noopener noreferrer">г. Киев, б-р Леси Украинки, 26</a>
+                    <a href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank" rel="noopener noreferrer" class="contacts-map">г. Киев, б-р Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
+                    <a href="mailto:info@example.com" class="link">info@example.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a href="tel:+380991111111"class="link">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
