--- a/index.html
+++ b/index.html
@@ -6,31 +6,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-  <header>
-    <nav>
-        <a href="./index.html" aria-label="логотип сайта" lang="en" class="logo-header"><span>Web</span>Studio</a>
+  <header class="header">
+    <nav class="navigation">
+        <a class="logo primary link" href="./index.html" aria-label="логотип сайта" lang="en"><span class="logo-accent">Web</span>Studio</a>
         <ul class="site-nav list">
-            <li>
-                <a href="#" class="link current">Студия</a>
+            <li class="site-nav-item">
+                <a class="link current" href="#">Студия</a>
             </li>
-            <li>
-                <a href="#" class="link">Портфолио</a>
+            <li class="site-nav-item">
+                <a class="link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
-                <a href="#" class="link">Контакты</a>
+            <li class="site-nav-item">
+                <a class="link" href="#">Контакты</a>
             </li>
         </ul>
     </nav>
     <address>
         <ul class="address-nav list">
             <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </address>
@@ -40,7 +43,7 @@
       <!-- HERO -->
     <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button">Заказать услугу</button>
+        <button class="button" type="button">Заказать услугу</button>
     </section>
 
     <!-- ADVANTAGES -->
@@ -114,18 +117,18 @@
       <!-- CONTACT INFORMATION -->
     <section class="contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <a href="./index.html" aria-label="логотип сайта" lang="en" class="logo-footer"><span>Web</span>Studio</a>
+        <a class="logo secondary link" href="./index.html" aria-label="логотип сайта" lang="en"><span class="logo-accent">Web</span>Studio</a>
         <address>
             <ul class="footer-address list">
                 <li>
                     <!-- Сменил "проспект" на "бульвар", т.к. проспект Леси Украинки в Киеве нет -->
-                    <a href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank" rel="noopener noreferrer" class="contacts-map">г. Киев, б-р Леси Украинки, 26</a>
+                    <a class="contacts-map link" href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank" rel="noopener noreferrer">г. Киев, б-р Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a href="mailto:info@example.com" class="link">info@example.com</a>
+                    <a class="link email" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111"class="link">+38 099 111 11 11</a>
+                    <a class="link phone" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
