--- a/portfolio.html
+++ b/portfolio.html
@@ -43,76 +43,103 @@
         <section>
             <h1 class="visually-hidden">Наши работы</h1>
             <ul class="list">
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
+                <li><button type="button">Все</button></li>
+                <li><button type="button">Веб-сайты</button></li>
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
             </ul>
             <ul>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-1.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Технокряк</h2>
+                        <p>Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-2.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-3.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-4.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Проект Prime</h2>
+                        <p>Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-5.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Проект Boxes</h2>
+                        <p>Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-6.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-7.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Издание Limited Edition</h2>
+                        <p>Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-8.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Проект LAB</h2>
+                        <p>Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                        <img src="./images/portfolio/portfolio-img-9.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+                        <h2>Growing Business</h2>
+                        <p>Приложение</p>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
+    <footer>
+    
+        <!-- CONTACT INFORMATION -->
+        <section class="contacts">
+            <h2 class="visually-hidden">Контакты</h2>
+            <a class="logo secondary link" href="./index.html" aria-label="логотип сайта" lang="en"><span
+                    class="logo-accent">Web</span>Studio</a>
+            <address>
+                <ul class="footer-address list">
+                    <li>
+                        <!-- Сменил "проспект" на "бульвар", т.к. проспект Леси Украинки в Киеве нет -->
+                        <a class="contacts-map link" href="https://goo.gl/maps/AZEBeKzeeW1Fva8DA" target="_blank"
+                            rel="noopener noreferrer">г. Киев, б-р Леси Украинки, 26</a>
+                    </li>
+                    <li>
+                        <a class="link email" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li>
+                        <a class="link phone" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </section>
+    </footer>
+    </body>
+    
+    </html>
