Стилизирована страница Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,75 +42,75 @@
     <main>
         <section>
             <h1 class="visually-hidden">Наши работы</h1>
-            <ul class="list">
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <ul class="categories list">
+                <li><button class="category-button" type="button">Веб-сайты</button></li>
+                <li><button class="category-button" type="button">Приложения</button></li>
+                <li><button class="category-button" type="button">Дизайн</button></li>
+                <li><button class="category-button" type="button">Все</button></li>
+                <li><button class="category-button" type="button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="projects list">
                 <li>
-                    <a href="">
+                    <a class="link" href="#">
                         <img src="./images/portfolio/portfolio-img-1.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Технокряк</h2>
-                        <p>Веб-сайт</p>
+                        <h2 class="projects-title">Технокряк</h2>
+                        <p class="projects-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/portfolio/portfolio-img-2.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
+                    <a class="link" href="#">
+                        <img src="./images/portfolio/portfolio-img-2.jpg" alt="Дизайн постера" width="370" height="294">
+                        <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+                        <p class="projects-text">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/portfolio/portfolio-img-3.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Ресторан Seafood</h2>
-                        <p>Приложение</p>
+                    <a class="link" href="#">
+                        <img src="./images/portfolio/portfolio-img-3.jpg" alt="Приложение для ресторана" width="370" height="294">
+                        <h2 class="projects-title">Ресторан Seafood</h2>
+                        <p class="projects-text">Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/portfolio/portfolio-img-4.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Проект Prime</h2>
-                        <p>Маркетинг</p>
+                    <a class="link" href="#">
+                        <img src="./images/portfolio/portfolio-img-4.jpg" alt="Маркетинг проект Prime" width="370" height="294">
+                        <h2 class="projects-title">Проект Prime</h2>
+                        <p class="projects-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/portfolio/portfolio-img-5.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Проект Boxes</h2>
-                        <p>Приложение</p>
+                    <a class="link" href="">
+                        <img src="./images/portfolio/portfolio-img-5.jpg" alt="Приложение для проекта Boxes" width="370" height="294">
+                        <h2 class="projects-title link">Проект Boxes</h2>
+                        <p class="projects-text">Приложение</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/portfolio/portfolio-img-6.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p>
+                    <a class="link" href="#">
+                        <img src="./images/portfolio/portfolio-img-6.jpg" alt="Вебсайт Inspiration has no Borders" width="370" height="294">
+                        <h2 class="projects-title">Inspiration has no Borders</h2>
+                        <p class="projects-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/portfolio/portfolio-img-7.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Издание Limited Edition</h2>
-                        <p>Дизайн</p>
+                    <a class="link" href="#">
+                        <img src="./images/portfolio/portfolio-img-7.jpg" alt="Дизайн для издания Limited Edition" width="370" height="294">
+                        <h2 class="projects-title">Издание Limited Edition</h2>
+                        <p class="projects-text">Дизайн</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/portfolio/portfolio-img-8.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Проект LAB</h2>
-                        <p>Маркетинг</p>
+                    <a class="link" href="#">
+                        <img src="./images/portfolio/portfolio-img-8.jpg" alt="Маркетинг для Проекта LAB " width="370" height="294">
+                        <h2 class="projects-title">Проект LAB</h2>
+                        <p class="projects-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./images/portfolio/portfolio-img-9.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-                        <h2>Growing Business</h2>
-                        <p>Приложение</p>
+                    <a class="link" href="#">
+                        <img src="./images/portfolio/portfolio-img-9.jpg" alt="Приложение для Growing Business" width="370" height="294">
+                        <h2 class="projects-title">Growing Business</h2>
+                        <p class="projects-text">Приложение</p>
                     </a>
                 </li>
             </ul>
@@ -140,6 +140,5 @@
             </address>
         </section>
     </footer>
-    </body>
-    
-    </html>
+</body>
+</html>
