--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <!-- ADVANTAGES -->
-    <section  class="section">
+    <section class="section">
         <h2 class="visually-hidden">Преимущества работы со студией</h2>
         <ul class="list">
             <li>
@@ -88,26 +88,26 @@
     <!-- OUR TEAM -->
     <section class="section">
         <h2>Наша команда</h2>
-        <ul class="list">
+        <ul class="team list">
             <li>
                 <img src="./images/team/team-img-1.jpg" alt="Игорь Демьяненко улыбается" width="270" height="260">
-                <h3>Игорь Демьяненко</h3>
-                <p class="section-text" lang="en">Product Designer</p>
+                <h3 class="team-name">Игорь Демьяненко</h3>
+                <p class="section-text position" lang="en">Product Designer</p>
             </li>
             <li>
                 <img src="./images/team/team-img-2.jpg" alt="Ольга Репина улыбается" width="270" height="260">
-                <h3>Ольга Репина</h3>
-                <p class="section-text" lang="en">Frontend Developer</p>
+                <h3 class="team-name">Ольга Репина</h3>
+                <p class="section-text position" lang="en">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/team/team-img-3.jpg" alt="Николай Тарасов улыбается" width="270" height="260">
-                <h3>Николай Тарасов</h3>
-                <p class="section-text" lang="en">Marketing</p>
+                <h3 class="team-name">Николай Тарасов</h3>
+                <p class="section-text position" lang="en">Marketing</p>
             </li>
             <li>
                 <img src="./images/team/team-img-4.jpg" alt="Михаил Ермаков улыбается" width="270" height="260">
-                <h3>Михаил Ермаков</h3>
-                <p class="section-text" lang="en">UI Designer</p>
+                <h3 class="team-name">Михаил Ермаков</h3>
+                <p class="section-text position" lang="en">UI Designer</p>
             </li>
         </ul>
     </section>
